[#12750] improvement(core): omit reserved+hidden properties from API responses (#12751)
### What changes were proposed in this pull request?

Refine entity property read-path behavior and fix fileset cloud
credential exposure:

1. **Omit** metadata `reserved` + `hidden` keys (e.g.
`gravitino.identifier`, `metalake-in-use`) from API responses.
2. **Keep** masking editable hidden / secret properties as `******` for
UI edit flows.
3. Extend `HiddenPropertyMaskUtils` with `classifyHiddenProperties(...)`
returning `MaskAndOmitKeys`, plus `maskHiddenProperties` overloads so
reserved+hidden keys can be omitted while other hidden/secret keys stay
masked.
4. Rename `getHiddenPropertyNames` to `getMaskAndOmitKeys` and wire
catalog/metalake/`EntityCombined*` paths through `MaskAndOmitKeys`;
update unit/integration tests.
5. **Fileset catalog (#11642):** register shared cloud credential
metadata (S3/OSS/Azure/GCS/COS) on catalog, schema, and fileset so cloud
access keys are hidden and returned as `******` in `properties()`
responses.
6. **GVFS alignment:** remove the static cloud-credential client path;
Java and Python GVFS always fetch credentials via `getCredentials()` so
cloud filesets keep working after credential masking.
7. Add `COSPropertiesMetadata`, COS auto-detection in `BaseCatalog`, and
`CloudStorageCredentialPropertyKeys` for GVFS client-side filtering.

### Why are the changes needed?

`******` exists so clients can see that an editable secret is set.
Reserved+hidden properties cannot be created or edited by users, so
masking them adds noise without helping the UI.

For fileset catalogs, cloud credential properties were previously
returned in plaintext from `catalog.properties()` (#11642). Masking them
breaks GVFS clients that read static keys from REST metadata, so GVFS
must use credential vending instead.

Fix: #12750
Fix: #11642

### Does this PR introduce _any_ user-facing change?

Yes.

- Reserved+hidden properties (notably `gravitino.identifier`) are
**omitt